# NSE-ALPHA-FINDER-cpp

./: .gitignore  .replit  README.md  pnpm-lock.yaml  replit.md  replit.nix
artifacts/api-server/: package.json
attached_assets/: Pasted--PRODUCT-REQUIREMENTS-DOCUMENT-PRD-PRODUCT-NAME-NSE-Alp_1775321362482.txt
engine/: CMakeLists.txt  Doxyfile  build.ps1  build.sh  cleaner.py  requirements.txt  run.ps1  run.sh
engine/build_output/: nse_engine  nse_engine_cpp.cp313-win_amd64.pyd  nse_tests
engine/cpp/bindings/: bindings.cpp
engine/cpp/include/: backtest.hpp  benchmark.hpp  data_ingestion.hpp  data_utils.hpp  indicators.hpp  signals.hpp
engine/cpp/src/: backtest.cpp  benchmark.cpp  data_ingestion.cpp  data_utils.cpp  indicators.cpp  main.cpp  signals.cpp
engine/cpp/tests/: test_backtest.cpp  test_data_ingestion.cpp  test_indicators.cpp  test_main.cpp  test_reference_values.cpp  test_runner.cpp  test_runner.hpp  test_signals.cpp
engine/data/: RELIANCE.NS.csv  sample_RELIANCE.csv
engine/python/: __init__.py  benchmark_table.py  compare.py  data_fetcher.py  nse_engine.py  server.py
engine/static/: index.html
